--- a/OpenAI_Integration_Projects.ipynb
+++ b/OpenAI_Integration_Projects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f3748654",
+   "id": "a06ee792",
    "metadata": {},
    "source": [
     "##### openai.ChatCompletion.create(...): This line calls the OpenAI API to generate a response using the GPT-3.5-turbo model. The *create* method is used to interact with the model and request a completion for the conversation provided in the messages list.\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ae25e4fa",
+   "id": "331d2e70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46399e11",
+   "id": "f0c6fcbe",
    "metadata": {},
    "source": [
     "### Authorized Access to OpenAI API"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "940154e2",
+   "id": "a352f6d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90880dc",
+   "id": "dfe832bf",
    "metadata": {},
    "source": [
     "#### Grammer Correction App"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "503a4f7f",
+   "id": "30a4881d",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3105f283",
+   "id": "81525815",
    "metadata": {},
    "outputs": [
     {
@@ -143,9 +143,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7fd038e",
+   "metadata": {},
+   "source": [
+    "#### Language Translator App"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "34cf76dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your statement in English Language only: How are you ?\n",
+      "तुम कैसे हो? (tum kaise ho?)\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input =input(\"Enter your statement in English Language only: \")\n",
+    "\n",
+    "response = openai.ChatCompletion.create(\n",
+    "    model = \"gpt-3.5-turbo\",\n",
+    "    messages = [\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": \"You will be provided with a sentence in English, and your task is to translate in Hindi\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": user_input\n",
+    "        }\n",
+    "    ],\n",
+    "    temperature = 0,\n",
+    "    max_tokens = 256\n",
+    ")\n",
+    "\n",
+    "print(response[\"choices\"][0][\"message\"][\"content\"])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "526b1609",
+   "id": "04acf3b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -153,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0eec8ac",
+   "id": "6a2febc1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -161,23 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ebe7a26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c4e9485",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e809037",
+   "id": "271caff4",
    "metadata": {},
    "outputs": [],
    "source": []
