Startup idea generator app

--- a/OpenAI_Integration_Projects.ipynb
+++ b/OpenAI_Integration_Projects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a06ee792",
+   "id": "816ddde0",
    "metadata": {},
    "source": [
     "##### openai.ChatCompletion.create(...): This line calls the OpenAI API to generate a response using the GPT-3.5-turbo model. The *create* method is used to interact with the model and request a completion for the conversation provided in the messages list.\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "331d2e70",
+   "id": "e7078b66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0c6fcbe",
+   "id": "ac4ed13b",
    "metadata": {},
    "source": [
     "### Authorized Access to OpenAI API"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a352f6d9",
+   "id": "cfbce00f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe832bf",
+   "id": "ddce64ca",
    "metadata": {},
    "source": [
     "#### Grammer Correction App"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "30a4881d",
+   "id": "2f54e198",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "81525815",
+   "id": "31f94ef3",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7fd038e",
+   "id": "6791b7d3",
    "metadata": {},
    "source": [
     "#### Language Translator App"
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34cf76dc",
+   "id": "9f9ae34d",
    "metadata": {},
    "outputs": [
     {
@@ -188,9 +188,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7c7d27b",
+   "metadata": {},
+   "source": [
+    "#### Keyword Extraction App"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04acf3b0",
+   "id": "a4fe9438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_input = \"\"\"Responsibilities:\n",
+    "Requirements:\n",
+    "Bachelor's or Master's degree in Computer Science, Statistics, Mathematics, or a related field.\n",
+    "Proven experience as a Data Scientist or similar role, demonstrating successful application of data science techniques.\n",
+    "Strong programming skills in languages such as Python, R, or Java.\n",
+    "Proficiency in data manipulation, cleaning, and preprocessing techniques.\n",
+    "Solid understanding of machine learning algorithms, including supervised and unsupervised methods.\n",
+    "Familiarity with data visualization tools (e.g., Tableau, Matplotlib, or ggplot) to present findings effectively.\n",
+    "Ability to communicate complex technical concepts to non-technical stakeholders clearly.\n",
+    "Strong problem-solving skills and an analytical mindset.\n",
+    "Experience with Big Data technologies and cloud platforms (e.g., Hadoop, Spark, AWS, or Azure) is a plus.\n",
+    "Knowledge of database systems and SQL is an advantage.\"\"\"\n",
+    "\n",
+    "response = openai.ChatCompletion.create(\n",
+    "    model = \"gpt-3.5-turbo\",\n",
+    "    messages = [\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": \"You will be provided with a block of text, and your task is to extract a list of keywords from it.\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": user_input\n",
+    "        }\n",
+    "    ],\n",
+    "    temperature = 0.5,\n",
+    "    max_tokens = 300\n",
+    ")\n",
+    "\n",
+    "print(response[\"choices\"][0][\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e4e41e0",
+   "metadata": {},
+   "source": [
+    "#### Airport Code Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8cd7ea56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are no specific airport codes mentioned in the given text. However, the airport code for Pune is PNQ and for New Delhi is DEL.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = openai.ChatCompletion.create(\n",
+    "    model = 'gpt-3.5-turbo',\n",
+    "    messages = [\n",
+    "        {\n",
+    "            'role': 'system',\n",
+    "            'content': 'You will be provided with a text, your task is to extract the airport codes from it.'\n",
+    "        },\n",
+    "        {\n",
+    "            'role': 'user',\n",
+    "            'content': 'I want to travel from Pune to New Delhi'\n",
+    "        }\n",
+    "    ],\n",
+    "    temperature = 0,\n",
+    "    max_tokens = 256\n",
+    ")\n",
+    "\n",
+    "print(response['choices'][0]['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1642dbd",
+   "metadata": {},
+   "source": [
+    "#### Startup Idea Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "522a73b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = openai.ChatCompletion.create(\n",
+    "  model=\"gpt-3.5-turbo\",\n",
+    "  messages=[\n",
+    "    {\n",
+    "      \"role\": \"user\",\n",
+    "      \"content\": \"Brainstorm some ideas combining Generative AI and corporate online courses.\"\n",
+    "    }\n",
+    "  ],\n",
+    "  temperature=0.6,\n",
+    "  max_tokens=256\n",
+    ")\n",
+    "\n",
+    "print(response['choices'][0]['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00f504ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -198,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a2febc1",
+   "id": "87fd4582",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -206,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "271caff4",
+   "id": "8bf39e0e",
    "metadata": {},
    "outputs": [],
    "source": []
